--- a/04_unstructured_data_text_mining.ipynb
+++ b/04_unstructured_data_text_mining.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "04_unstructured_data_text_mining.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -559,7 +560,7 @@
       },
       "source": [
         "# Clone Library and Data from Github\n",
-        "! git clone https://github.com/dianrdn/tm\n",
+        "! git clone https://github.com/sma-health/tm\n",
         "\n",
         "# Set Data Directory\n",
         "os.chdir('tm')"
